ipl-frontend/ipl-frontend-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipl-frontend-ingress
  labels:
    app: ipl-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ipl.local # Define your desired domain/hostname here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ipl-frontend-service
            port:
              number: 8082
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ipl-backend-service
            port:
              number: 8081
